# university-work

./: .gitignore  README.md
coursework-sdt/: CMakeLists.txt  README.md  TODO.txt
coursework-sdt/src/: accounts.cpp  accounts.h  date-utilities.cpp  date-utilities.h  fstream-utilities.cpp  fstream-utilities.h  main.cpp  modules.cpp  modules.h  other-functions.cpp  other-functions.h  products.cpp  products.h  searches.cpp  searches.h  sha256.cpp  sorts.cpp  sorts.h  system-access.cpp  system-access.h  validation.cpp  validation.h  variables.h
oaip-labs/2-term/1-lab/: CMakeLists.txt  TODO.txt  main.cpp  recursions.cpp  recursions.h
oaip-labs/2-term/2-lab/: CMakeLists.txt  TODO.txt  log.txt  main.cpp  stack.cpp  stack.h  validation.cpp  validation.h
oaip-labs/2-term/3-lab/: CMakeLists.txt  double-linked-list.cpp  double-linked-list.h  main.cpp  validation.h
oaip-labs/2-term/4-lab/: CMakeLists.txt  main.cpp  stack.cpp  stack.h  validation.cpp  validation.h
oaip-labs/2-term/5-lab/: CMakeLists.txt  main.cpp  tree.cpp  tree.h  validation.cpp  validation.h
oaip-labs/2-term/6-lab/: CMakeLists.txt  main.cpp
oaip-labs/2-term/7-lab/: CMakeLists.txt  main.cpp
oaip-labs/2-term/8-lab/: CMakeLists.txt  main.cpp
oaip-labs/2-term/9-lab/: CMakeLists.txt  book.cpp  book.h  files-work.cpp  files-work.h  main.cpp  output-table.cpp  output-table.h  searches.cpp  searches.h  sorts.cpp  sorts.h  validation.cpp  validation.h
oaip-labs/2-term/test-function-graph/: index.html  script.js
